clusters/casa/apps/paperless/manifests/broker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-broker
  namespace: paperless
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: paperless-broker
  template:
    metadata:
      labels:
        app: paperless-broker
    spec:
      containers:
        - name: valkey
          image: "valkey/valkey:9-alpine@sha256:ee91f7a174ac4d6a6b0685b3a60e321f0a9dbbb691f9b0e285be2ba1d1be8328"
          args: ["valkey-server", "--save", "300", "1", "--loglevel", "warning"]
          ports:
            - name: valkey
              containerPort: 6379
          startupProbe:
            exec:
              command: ["valkey-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            exec:
              command: ["valkey-cli", "ping"]
            periodSeconds: 30
          readinessProbe:
            exec:
              command: ["valkey-cli", "ping"]
            periodSeconds: 10
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: data
      volumes:
        - name: data
          emptyDir:
            sizeLimit: 64Mi
