clusters/casa/apps/paperless/manifests/gotenberg.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg
  namespace: paperless
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: paperless-gotenberg
  template:
    metadata:
      labels:
        app: paperless-gotenberg
    spec:
      containers:
        - name: gotenberg
          image: "gotenberg/gotenberg:8.34@sha256:67097317623a503ba2a6a7e9ae8db6929a1f7e1bbd88077bacf2d325fbdab923"
          args:
            - gotenberg
            - --chromium-disable-javascript=true
            - --chromium-allow-list=file:///tmp/.*
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: "1"
              memory: 1Gi
