clusters/casa/apps/paperless/manifests/tika.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless-tika
  ports:
    - name: http
      port: 9998
      targetPort: http
      protocol: TCP
