clusters/casa/apps/paperless/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - paperless.biplane.casa
  rules:
    - backendRefs:
        - name: paperless
          port: 80
